// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineNumberify util handles multiple lines 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "fn
",
          },
        ],
        "properties": {
          "className": [],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": {
      "className": [
        "line-number",
      ],
      "data-node-index": 1,
    },
    "tagName": "span",
    "type": "element",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "
",
      },
    ],
    "properties": {
      "className": [
        "line-number",
      ],
      "data-node-index": 2,
    },
    "tagName": "span",
    "type": "element",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "
",
      },
    ],
    "properties": {
      "className": [
        "line-number",
      ],
      "data-node-index": 3,
    },
    "tagName": "span",
    "type": "element",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "
",
      },
    ],
    "properties": {
      "className": [
        "line-number",
      ],
      "data-node-index": 4,
    },
    "tagName": "span",
    "type": "element",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "abc
",
      },
    ],
    "properties": {
      "className": [
        "line-number",
      ],
      "data-node-index": 5,
    },
    "tagName": "span",
    "type": "element",
  },
  {
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "",
          },
        ],
        "properties": {
          "className": [],
        },
        "tagName": "span",
        "type": "element",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "t",
          },
        ],
        "properties": {
          "className": [
            "token",
            "function",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "(",
          },
        ],
        "properties": {
          "className": [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      {
        "children": [
          {
            "type": "text",
            "value": ")",
          },
        ],
        "properties": {
          "className": [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": {
      "className": [
        "line-number",
      ],
      "data-node-index": 6,
    },
    "tagName": "span",
    "type": "element",
  },
]
`;

exports[`lineNumberify util handles one-liners 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "fn",
          },
        ],
        "properties": {
          "className": [
            "token",
            "function",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "(",
          },
        ],
        "properties": {
          "className": [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      {
        "children": [
          {
            "type": "text",
            "value": ")",
          },
        ],
        "properties": {
          "className": [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      {
        "children": [
          {
            "type": "text",
            "value": ";",
          },
        ],
        "properties": {
          "className": [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": {
      "className": [
        "line-number",
      ],
      "data-node-index": 1,
    },
    "tagName": "span",
    "type": "element",
  },
]
`;
